<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Alm_AlarmHistoryType" Id="{1c60bafb-9170-4db2-a87e-2f0b04b7e29a}">
    <Declaration><![CDATA[TYPE Alm_AlarmHistoryType :
STRUCT
  	EventMessage:            	WSTRING(255);
	EventId:					DINT;
   	EventTime:               	DT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>